fixed calendar alignment

--- a/jgclark.DashboardReact/src/react/css/CalendarPicker.css
+++ b/jgclark.DashboardReact/src/react/css/CalendarPicker.css
@@ -1,5 +1,8 @@
 /* TODO: have not figured out how to set the size of the calendar itself yet */
 /* changing the cell size here helps but i don't know how to set the whole container size */
+
+/* NOTE: GENERALLY YOU HAVE TO SET !IMPORTANT TO GET THESE CALENDAR STYLES TO OVERRIDE THE SETTINGS */
+
 .rdp {
   --rdp-cell-size: '30px';
   box-shadow: none;
@@ -18,8 +21,8 @@
 
 .rdp-months,
 .rdp-month {
-  margin-top: 0px;
-  padding-top: 0px;
+  margin-top: 0px !important;
+  padding-top: 0px !important;
 }
 
 .rdp-nav {
@@ -47,4 +50,19 @@
 .rdp-day_selected {
   background-color: var(--tint-color);
   color: var(--fg-main-color);
+}
+
+/* make sure the months top-align (the left one was lower by default) */
+.rdp-month.rdp-caption_start, .rdp-month.rdp-caption_end {
+  margin-top: 0px !important;
+  padding-top: 0px !important;
+}
+
+/* move the forward/back month arrows down a little to align with the month name */
+.rdp-nav_button_next, .rdp-nav_button_previous {
+  margin-top: 12px !important; /* TODO: looks different when there is only one month on the page */
+}
+
+#react-day-picker-1 {
+  padding-top: 10px !important;
 }
